# px4-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-BSD-3  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
cmake/: px4-rust.cmake
crates/px4/: Cargo.toml
crates/px4-log/: Cargo.toml
crates/px4-log/src/: args.rs  lib.rs  log_backend.rs  panic.rs  result.rs
crates/px4-macros/: Cargo.toml
crates/px4-macros/src/: lib.rs
crates/px4-msg-codegen/: Cargo.toml
crates/px4-msg-codegen/src/: emit.rs  layout.rs  lib.rs  model.rs  parser.rs
crates/px4-msg-codegen/tests/: real_tree.rs
crates/px4-msg-macros/: Cargo.toml
crates/px4-msg-macros/src/: lib.rs
crates/px4-msg-macros/tests/: macro_expand.rs
crates/px4-sys/: Cargo.toml  README.md  build.rs  wrapper.cpp  wrapper.h
crates/px4-sys/bindings/: bindings.rs
crates/px4-sys/src/: lib.rs
crates/px4-uorb/: Cargo.toml
crates/px4-uorb/src/: ffi.rs  lib.rs  pub_.rs  raw.rs  sub.rs  topic.rs
crates/px4-uorb/tests/: extensions_advertise_multi.rs  extensions_unadvertise.rs  extensions_with_interval.rs  round_trip.rs
crates/px4-uorb/tests/common/: mod.rs
crates/px4-workqueue/: Cargo.toml
crates/px4-workqueue-macros/: Cargo.toml
crates/px4-workqueue-macros/src/: lib.rs
crates/px4-workqueue/src/: atomic_waker.rs  cell.rs  channel.rs  ffi.rs  hrt.rs  lib.rs  notify.rs  timer.rs  waker.rs  wq.rs  yield_.rs
crates/px4-workqueue/tests/: basic.rs  channel.rs  notify.rs  task_macro.rs  timer.rs  trybuild.rs
crates/px4-workqueue/tests/trybuild/fail/: bad_wq_name.rs  bad_wq_name.stderr  missing_wq.rs  missing_wq.stderr  non_unit_return.rs  non_unit_return.stderr  sync_fn.rs  sync_fn.stderr  unknown_arg.rs  unknown_arg.stderr
crates/px4/src/: lib.rs
crates/px4/tests/: trybuild.rs
crates/px4/tests/trybuild/fail/: async_fn.rs  async_fn.stderr  bad_return_type.rs  bad_return_type.stderr  self_param.rs  self_param.stderr  too_many_args.rs  too_many_args.stderr  unknown_arg.rs  unknown_arg.stderr
docs/: architecture.md  async-model.md  linking-into-px4.md  task-macro.md
docs/research/: renode-vs-qemu.md
docs/roadmap/: README.md  phase-01-scaffold.md  phase-02-px4-sys.md  phase-03-px4-log.md  phase-04-workqueue.md  phase-05-msg-codegen.md  phase-06-uorb.md  phase-07-cmake-integration.md  phase-08-examples.md  phase-09-host-testing.md  phase-10-publish.md  phase-11-sitl-e2e.md  phase-12-px4-umbrella.md  phase-13-renode-nuttx-e2e.md
examples/gyro_watch/: CMakeLists.txt  Cargo.toml  Kconfig
examples/gyro_watch/src/: lib.rs
examples/heartbeat/: CMakeLists.txt  Cargo.toml  Kconfig
examples/heartbeat/src/: lib.rs
examples/hello_module/: CMakeLists.txt  Cargo.toml  Kconfig
examples/hello_module/src/: lib.rs
examples/multi_task/: CMakeLists.txt  Cargo.toml  Kconfig  rust-toolchain.toml
examples/multi_task/src/: lib.rs
examples/px4-rust-template/: CMakeLists.txt  Cargo.toml  Kconfig
examples/px4-rust-template/src/: lib.rs
tests/renode/: Cargo.toml  README.md  rust-toolchain.toml
tests/renode/.config/: nextest.toml
tests/renode/px4-board/: default.px4board  firmware.prototype
tests/renode/px4-board/nuttx-config/nsh/: defconfig
tests/renode/px4-board/src/: CMakeLists.txt  board_config.h  init.c  timer_config.cpp
tests/renode/scripts/: setup-board.sh  teardown-board.sh
tests/renode/src/: lib.rs  process.rs
tests/renode/src/fixtures/: mod.rs  px4_renode.rs
tests/renode/tests/: e2e_smoke.rs  example_gyro_watch.rs  example_hello_module.rs  example_multi_task.rs  multi_wq.rs  panic.rs  probe.rs  pubsub.rs  pxh.rs  smoke.rs
tests/sitl/: Cargo.toml  rust-toolchain.toml
tests/sitl/.config/: nextest.toml
tests/sitl/px4-externals/msg/: CMakeLists.txt  E2ePubsub.msg  GyroAlert.msg
tests/sitl/px4-externals/src/: CMakeLists.txt
tests/sitl/px4-externals/src/modules/e2e_multi_wq/: CMakeLists.txt  Cargo.toml  Kconfig
tests/sitl/px4-externals/src/modules/e2e_multi_wq/src/: lib.rs
tests/sitl/px4-externals/src/modules/e2e_panic/: CMakeLists.txt  Cargo.toml  Kconfig
tests/sitl/px4-externals/src/modules/e2e_panic/src/: lib.rs
tests/sitl/px4-externals/src/modules/e2e_pubsub_pub/: CMakeLists.txt  Cargo.toml  Kconfig
tests/sitl/px4-externals/src/modules/e2e_pubsub_pub/src/: lib.rs
tests/sitl/px4-externals/src/modules/e2e_pubsub_sub/: CMakeLists.txt  Cargo.toml  Kconfig
tests/sitl/px4-externals/src/modules/e2e_pubsub_sub/src/: lib.rs
tests/sitl/px4-externals/src/modules/e2e_smoke/: Airspeed.msg  CMakeLists.txt  Cargo.toml  Kconfig
tests/sitl/px4-externals/src/modules/e2e_smoke/src/: lib.rs
tests/sitl/px4-externals/src/modules/example_gyro_watch/: CMakeLists.txt
tests/sitl/px4-externals/src/modules/example_hello_module/: CMakeLists.txt
tests/sitl/px4-externals/src/modules/example_multi_task/: CMakeLists.txt
tests/sitl/src/: lib.rs  process.rs
tests/sitl/src/fixtures/: build.rs  mod.rs  px4_sitl.rs
tests/sitl/tests/: boot.rs  example_gyro_watch.rs  example_hello_module.rs  example_multi_task.rs  multi_wq.rs  panic.rs  pubsub.rs  smoke.rs
xtask/: Cargo.toml
xtask/src/: main.rs
