[package]
name          = "px4-macros"
version       = { workspace = true }
edition       = "2021"
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
authors       = { workspace = true }
description   = "#[main] entry-point proc-macro for the px4 umbrella crate."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }
