[package]
name          = "px4-msg-codegen"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
authors       = { workspace = true }
description   = "Parser + layout + Rust emitter for PX4 uORB .msg files."

[lib]
doctest = false

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
