[package]
name          = "px4-msg-macros"
version       = { workspace = true }
edition       = "2021"
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
authors       = { workspace = true }
description   = "#[px4_message(\"path/to/Foo.msg\")] proc macro — parses and emits a byte-compatible PX4 uORB struct."

[lib]
proc-macro = true

[dependencies]
proc-macro2      = { workspace = true }
proc-macro-crate = { workspace = true }
quote            = { workspace = true }
syn              = { workspace = true }
px4-msg-codegen  = { workspace = true }

[dev-dependencies]
# The macro emits references to ::px4_uorb and ::px4_sys, so test
# crates that *use* the macro need them in scope. They're dev-only
# here because the macro itself doesn't link them.
px4-sys  = { workspace = true }
px4-uorb = { workspace = true }
