[package]
name        = "hello_module"
version     = "0.1.0"
edition     = "2024"
publish     = false
description = "Phase-08 example — one #[task] that logs once a second via Sleep."

[lib]
crate-type = ["staticlib"]
doctest    = false

[dependencies]
# Relative path from this Cargo.toml. When copied out of the px4-rs
# tree, rewrite this to point at wherever your px4-rs checkout lives.
px4 = { path = "../../crates/px4" }

[profile.release]
panic     = "abort"
opt-level = "s"
lto       = "fat"
strip     = "symbols"

[profile.dev]
panic = "abort"
