[package]
name        = "px4_rust_template"
version     = "0.1.0"
edition     = "2024"
publish     = false
description = "Skeleton PX4 module written in Rust. Copy this directory and rename."

[lib]
crate-type = ["staticlib"]
doctest    = false

[dependencies]
# Relative path from this Cargo.toml; rewrite after copy-out.
px4 = { path = "../../crates/px4" }

[profile.release]
panic     = "abort"
opt-level = "s"
lto       = "fat"
strip     = "symbols"

[profile.dev]
panic = "abort"
