[package]
name        = "e2e_smoke"
version     = "0.1.0"
edition     = "2024"
publish     = false
description = "Phase-11 smoke module: spawns one #[task] that publishes Airspeed."

[lib]
crate-type = ["staticlib"]
doctest    = false

[dependencies]
# Relative paths from this Cargo.toml. The path goes up 6 levels:
#   tests/sitl/px4-externals/src/modules/e2e_smoke/Cargo.toml
#         ↑    ↑           ↑   ↑       ↑
#         5    4           3   2       1
# to reach the workspace root, then down into crates/.
px4-log              = { path = "../../../../../../crates/px4-log" }
px4-sys              = { path = "../../../../../../crates/px4-sys" }
px4-uorb             = { path = "../../../../../../crates/px4-uorb" }
px4-workqueue        = { path = "../../../../../../crates/px4-workqueue" }
px4-workqueue-macros = { path = "../../../../../../crates/px4-workqueue-macros" }
px4-msg-macros       = { path = "../../../../../../crates/px4-msg-macros" }

[profile.release]
panic     = "abort"
opt-level = "s"
lto       = "fat"
strip     = "symbols"

[profile.dev]
panic = "abort"
